<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    style="@style/ContentRowStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/detail_label_poster"
                        android:textStyle="bold" />

                    <ImageView
                        android:id="@+id/poster_iv"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/movie_image_height"
                        android:adjustViewBounds="true"
                        android:contentDescription="@string/movie_poster_content_description"
                        android:scaleType="centerCrop" />

                </LinearLayout>

                <LinearLayout
                    style="@style/ContentRowStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/detail_label_backdrop"
                        android:textStyle="bold" />

                    <ImageView
                        android:id="@+id/backdrop_iv"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/movie_image_height"
                        android:adjustViewBounds="true"
                        android:contentDescription="@string/movie_poster_content_description"
                        android:scaleType="centerCrop" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                style="@style/ContentRowStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/detail_label_adult"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/adult_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <LinearLayout
                style="@style/ContentRowStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/detail_label_budget"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/budget_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <LinearLayout
                style="@style/ContentRowStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/detail_label_genres"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/genres_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <LinearLayout
                style="@style/ContentRowStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/detail_label_homepage"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/homepage_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <LinearLayout
                style="@style/ContentRowStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/detail_label_original_language"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/original_language_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <LinearLayout
                style="@style/ContentRowStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/detail_label_original_title"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/original_title_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <LinearLayout
                style="@style/ContentRowStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/detail_label_overview"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/overview_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <LinearLayout
                style="@style/ContentRowStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/detail_label_popularity"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/popularity_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <LinearLayout
                style="@style/ContentRowStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/detail_label_production_companies"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/production_companies_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <LinearLayout
                style="@style/ContentRowStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/detail_label_production_countries"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/production_countries_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <LinearLayout
                style="@style/ContentRowStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/detail_label_release_date"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/release_date_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <LinearLayout
                style="@style/ContentRowStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/detail_label_revenue"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/revenue_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <LinearLayout
                style="@style/ContentRowStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/detail_label_runtime"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/runtime_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <LinearLayout
                style="@style/ContentRowStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/detail_label_spoken_languages"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/spoken_languages_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <LinearLayout
                style="@style/ContentRowStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/detail_label_status"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/status_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <LinearLayout
                style="@style/ContentRowStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/detail_label_tagline"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tagline_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <LinearLayout
                style="@style/ContentRowStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/detail_label_vote_average"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/vote_average_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <LinearLayout
                style="@style/ContentRowStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/detail_label_vote_count"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/vote_count_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <TextView
        android:id="@+id/tv_error_message_display"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/error_message"
        android:textSize="20sp"
        android:visibility="invisible" />

    <ProgressBar
        android:id="@+id/pb_loading_indicator"
        android:layout_width="42dp"
        android:layout_height="42dp"
        android:layout_gravity="center"
        android:visibility="invisible" />

</FrameLayout>